# DecisionFocusedMTL

./: .gitignore  CHANGELOG.md  CODE_REVIEW.md  DFL_MultiPortfolio_Fairness_Spec.md  Makefile  README.md  analysis.py  configs.py  medical_experiment_colab.ipynb  notebook_analysis.ipynb  notebook_no_fairness.ipynb  notebook_run.ipynb  plotting.py  pyproject.toml  run_ablation.py  run_methods.py
docs/: CLEANUP_BACKLOG.md  experiment_specification.md  misspecification_note.md
experiments/: __init__.py  analysis.py  colab_runner.py  configs.py  generate_figures.py  generate_tables.py  plotting.py  run_ablation.py  run_healthcare_final.py  run_knapsack_final.py  run_methods.py
experiments/advisor_review/: ALIGNMO_PLAN.md  LAMBDA_ABLATION_NOTE.md  NEXT_SESSION_STATUS.md  THEOREM_PROMPT.md  THEORY_DISCUSSION_PROMPT.md  THEORY_WORKPLAN.md  aggregate_alignmo_eval.py  aggregate_alignmo_pilot.py  analyze_healthcare_grid.py  analyze_healthcare_v2.py  analyze_mu_sweep.py  drivers.py  (+27 more)
notebooks/: advisor_review_visualization.ipynb  analysis.ipynb  no_fairness.ipynb  results.ipynb  run.ipynb  worker_a_healthcare.ipynb  worker_b_knapsack_alpha05.ipynb  worker_c_knapsack_alpha20.ipynb
results/: alignmo_eval_full_hc_run_log.txt  iter_logs_full.csv  stage_results_full.csv
results_no_decision_fairness/: stage_results_full.csv
results_no_fairness/: iter_logs_full.csv  stage_results_full.csv
scripts/: run_healthcare_final.sh  run_knapsack_final.sh  run_sample.sh
tests/: test_losses.py  test_md_knapsack.py  test_medical_gradients.py  test_method_semantics.py  test_mo_handlers.py
(+2433 files in other folders)
